# brightspace-admin-mcp

./: .env.example  .gitignore  .mcp.json  DEMO.md  PROMPTS.md  README.md  SAFETY.md  pyproject.toml
scripts/: authorize.py  exchange.py  setup_desktop.py  smoke.py
src/brightspace_mcp/: __init__.py  auth.py  client.py  config.py  context.py  server.py
src/brightspace_mcp/tools/: __init__.py  datahub.py  enrollments.py  grades.py  orgunits.py  raw.py  users.py
tests/: conftest.py  test_auth.py  test_client.py
