[project]
name = "brightspace-admin-mcp"
version = "0.1.0"
description = "MCP server for D2L Brightspace (Valence) admin tasks — read-only first."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.scripts]
brightspace-mcp = "brightspace_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/brightspace_mcp"]
